<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/pop_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/btn_color"
    android:layout_alignParentBottom="true"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@+id/btn_write"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dip"
        android:background="@color/btn_color"
        android:gravity="center"
        android:text="@string/write"
        android:textStyle="bold" />

    <TextView
    android:id="@+id/btn_about"
    android:layout_marginLeft="20dip"
    android:layout_marginRight="20dip"
    android:gravity="center"
    android:layout_marginTop="5dip"
    android:layout_width="fill_parent"
    android:layout_height="40dp"
    android:text="@string/Active_page2"
    android:background="@color/btn_color"
    android:textStyle="bold"
    />
    <TextView
        android:id="@+id/btn_setting"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:gravity="center"
        android:layout_marginTop="5dip"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/setting_name"
        android:background="@color/btn_color"
        android:textStyle="bold"
        />


</LinearLayout>